@@ -30,7 +30,10 @@
  *          java.management/com.sun.jmx.remote.security
  * @run clean RMIAltAuthTest
  * @run build RMIAltAuthTest SimpleStandard SimpleStandardMBean
+ *
+ * @run main/othervm RMIAltAuthTest
  * @run main/othervm -Djava.security.manager=allow RMIAltAuthTest
+ * @run main/othervm -Djava.security.manager=allow -DSimpleStandard.useGetSubjectACC=true RMIAltAuthTest
  */
 
 import java.io.File;
